# solana-anchor-book-code

./: .gitignore  README.md  notes.md
.devcontainer/: Dockerfile  devcontainer.json
blog/: Anchor.toml  package.json
blog/programs/blog/: Cargo.toml
blog/programs/blog/src/: lib.rs
blog/tests/: blog.ts
hello_world/: Anchor.toml  package.json
hello_world/app/my-webapp/: config-overrides.js  package.json
hello_world/app/my-webapp/src/: App.css  App.tsx  index.css
hello_world/programs/hello_world/src/: lib.rs
hello_world/tests/: hello_world.ts
hello_world_refactored/: Anchor.toml
hello_world_refactored/app/my-webapp/src/: App.tsx  index.tsx
hello_world_refactored/programs/hello_world/: Cargo.toml
hello_world_refactored/programs/hello_world/src/: lib.rs
hello_world_refactored/tests/: hello_world.ts
metaplex_scripts/: Anchor.toml  package.json  tsconfig.json
metaplex_scripts/programs/metaplex_scripts/: Cargo.toml
metaplex_scripts/programs/metaplex_scripts/src/: lib.rs
metaplex_scripts/scripts/: add_token_metadata.ts  create_nft_collection.ts  edition_printing.ts  print_edition.ts
metaplex_scripts/scripts/assets/fungible-token/: metadata.json
metaplex_scripts/tests/: metaplex_scripts.ts
puppet_master/: Anchor.toml  Cargo.toml  package.json
puppet_master/programs/puppet/: Cargo.toml
puppet_master/programs/puppet-master/: Cargo.toml
puppet_master/tests/: puppet.ts
puppet_master_refactored/tests/: puppet.ts
token_sale/: Anchor.toml  package.json
token_sale/programs/token_sale/: Cargo.toml
token_sale/tests/: token_sale.ts
(+15 files in other folders)
